--- a/public/manage-01/css/common.css
+++ b/public/manage-01/css/common.css
@@ -1,3 +1,15 @@
+/* 重置样式 */
+a:link,
+a:visited,
+a:hover,
+a:active {
+    text-decoration: none;
+}
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
 /* 注册页 */
 .body_bg {
     background: #222D32;
@@ -10,4 +22,114 @@
 }
 .mt_150 {
     margin-top: 150px;
+}
+
+/* 侧边栏 */
+.lt_aside {
+    width: 180px;
+    height: 100%;
+    background: #222D32;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    transition: left 1s;
+}
+.lt_aside.hidemenu {
+    left: -180px;
+}
+.lt_aside .brand {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    background: #367FA9;
+}
+.lt_aside .brand a {
+    display: block;
+    text-align: center;
+    color: #fff;
+    font-size: 24px;
+}
+.lt_aside .user {
+    width: 100%;
+    height: 180px;
+    padding-top: 30px;
+}
+.lt_aside .user img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: block;
+    margin: 0 auto;
+}
+.lt_aside .user a {
+    padding-top: 5px;
+    display: block;
+    line-height: 40px;
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+}
+.lt_aside .nav li a {
+    display: block;
+    padding-left: 40px;
+    color: #fff;
+    border-left: 3px solid transparent;
+    line-height: 40px;
+}
+.lt_aside .nav li a.current {
+    background: #1D1F21;
+    border-left: 3px solid #069;
+}
+.lt_aside .nav li a i {
+    padding-right: 6px;
+}
+.lt_aside .nav .children {
+    display: none;
+}
+.lt_aside .nav .children a {
+    padding-left: 60px;
+}
+/* 主体 */
+.lt_main {
+    width: 100%;
+    padding-left: 180px;
+    padding-top: 50px;
+    transition: padding-left 1s;
+}
+.lt_main.hidemenu {
+    padding-left: 0px;
+}
+
+/* 头部 */
+.lt_topbar {
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    padding-left: 180px;
+    background: #3C8DBC;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 888;
+    transition: padding-left 1s;
+}
+.lt_topbar.hidemenu {
+    padding-left: 0px;
+}
+.lt_topbar a {
+    display: block;
+    width: 50px;
+    line-height: 50px;
+    text-align: center;
+    color: #fff;
+    font-size: 20px;
+}
+
+/* 退出模态框 */
+.red {
+    color: #A94442;
+}
+.pr_5 {
+    padding-right: 5px;
 }
