--- a/public/manage-01/css/common.css
+++ b/public/manage-01/css/common.css
@@ -10,6 +10,12 @@ ul {
     padding: 0;
     margin: 0;
 }
+
+table.table.table-bordered th,
+table.table.table-bordered td {
+    vertical-align: middle;
+    text-align: center;
+}
 /* 注册页 */
 .body_bg {
     background: #222D32;
